tests/ui/fail/custom_derive_empty_generics_parameters.rs
use nnn::nnn;

#[nnn(nnn_derive(Into<>, From<>))]
struct Float(f64);

fn main() {}
